prost-canonical-serde/tests/ui/adjacent_tagged_enum.stderr
error: unsupported serde container attribute `content`
 --> tests/ui/adjacent_tagged_enum.rs:6:20
  |
6 | #[serde(tag = "t", content = "c")]
  |                    ^^^^^^^
